fixing scrollbar position

--- a/desafio-frontend2/index.css
+++ b/desafio-frontend2/index.css
@@ -155,7 +155,6 @@
 
     max-width:100%;
     max-height:100%;
-    overflow:auto;
 }
 
 .input-group-custom{
